--- a/src/global.scss
+++ b/src/global.scss
@@ -2,3 +2,5 @@ $color-default: #ccc;
 $color-primary: #3286fe;
 $color-text: #606b92;
 $color-light: #fff;
+$color-danger: #d4237a;
+$color-info: #f29f3f;
