--- a/src/iconfont.scss
+++ b/src/iconfont.scss
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('https://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.eot?t=1490861582002'); /* IE9*/
-  src: url('https://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.eot?t=1490861582002#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('https://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.woff?t=1490861582002') format('woff'), /* chrome, firefox */
-  url('https://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.ttf?t=1490861582002') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('https://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.svg?t=1490861582002#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('http://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.eot?t=1490861582002'); /* IE9*/
+  src: url('http://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.eot?t=1490861582002#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('http://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.woff?t=1490861582002') format('woff'), /* chrome, firefox */
+  url('http://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.ttf?t=1490861582002') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('http://www.fancywhale.cn/font_q8f4q0481rurqkt9/iconfont.svg?t=1490861582002#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
