--- a/src/global.scss
+++ b/src/global.scss
@@ -4,3 +4,5 @@ $color-text: #606b92;
 $color-light: #fff;
 $color-danger: #d4237a;
 $color-info: #f29f3f;
+$color-item-hover: #ECECEC;
+$color-success: #77c34f;
