--- a/src/pages/review/review.scss
+++ b/src/pages/review/review.scss
@@ -21,9 +21,9 @@
 .question-choice{
   font-size: 13px;
 }
-.controls{
-  margin-top: 15px;
-  margin-bottom: 15px;
+.answers{
+  margin: 15px;
+  font-size: 25rpx;
 }
 .app-content{
   padding-bottom: 47px;
