--- a/src/app.scss
+++ b/src/app.scss
@@ -6,12 +6,15 @@
 page{
   height: 100%;
   color: $color-text;
+  overflow: hidden;
 }
 
 .app-container{
   display: flex;
   flex-direction: column;
   height: 100%;
+  z-index: 10;
+  position: relative;
   .app-header{
     height: 28px;
     background: $color-primary;
@@ -120,4 +123,160 @@ $row-height: 100px;
 
 .weui-panel__bd{
   padding: 1rem;
+}
+
+.ui-list{
+  .ui-list-item{
+    border: solid 1px #ccc;
+    border-left: none;
+    border-right: none;
+
+    &.hover, &:hover {
+      background-color: $color-item-hover;
+    }
+
+    .ui-list-item__content{
+      flex: 1;
+      font-size: 13px;
+      display: flex;
+    }
+
+    &:first-child{
+      border-bottom: none;  
+    }
+    .item-header{
+      padding: 10px;
+      line-height: 34px;
+      icon{
+        font-size: 25px;
+      }
+    }
+    .item-footer{
+      padding: 10px;
+      line-height: 34px;
+    }
+
+  }
+}
+
+.backdrop{
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 20;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  &.active{
+    display: block;
+  }
+}
+
+.modal-holder{
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  .modal-container{
+    transform: translateY(100%);
+    transition: all 0.3s;
+  }
+
+  &.active{
+    z-index: 101;
+    .backdrop{
+      display: block;
+    }
+    .modal-container {
+      transform: translateY(0%);
+      z-index: 21;
+    }
+  }
+}
+
+.modal-container{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  align-content: space-around;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.modal{
+  width: 80%;
+  position: relative;
+  left: 10%;
+  .modal-header{
+    font-size: 23px;
+    color: #fff;
+    background-color: $color-primary;
+    text-align: center;
+    padding: 5px;
+    border-radius: 10px 10px 0px 0px;
+  }
+  .modal-body{
+    background-color: #fff;
+    border-radius: 0px 0px 10px 10px;
+  }
+}
+
+text, icon{
+  font-size: 23rpx;
+  &, &.default{
+    color: $color-default;
+  }
+  &.info {
+    color: $color-info;
+  }
+  &.danger {
+    color: $color-danger;
+  }
+  &.primay {
+    color: $color-primary;
+  }
+  &.success {
+    color: $color-success;
+  }
+}
+
+.accent-number {
+  font-size: 58rpx;
+}
+
+.sub-title {
+  color: rgba(255,255,255,0.5);
+  font-size: 20rpx;
+  line-height: 20rpx;
+}
+.weui-flex{
+  &.h-space-between {
+    justify-content: space-between;
+  }
+  &.v-center {
+    align-content: center;
+    align-items: center;
+  }
+  &.h-center {
+    justify-content: center;
+  }
+}
+
+view{
+  &.primary {
+    background-color: $color-primary;
+    color: #fff;
+  }
+}
+
+text {
+  &.primary-contract {
+    color: #fff;
+  }
 }
